--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY First Web Page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>MY First Web Page</h1>
+    <nav>
+        <H3>logo</H3>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1> My First Web Page</h1>
+        <button>Get Started</button>
+    </header>
+
 </body>
 </html>
